k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-the-grammar
  namespace: learn-the-grammar
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
